Fix post selection modal overflowing out-of-screen
Our custom header seems to cause this in desktop view. This seems to fix
it.

--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -762,6 +762,7 @@ $topic-avatar-width: 45px;
   padding: 5px;
   margin-bottom: 5px;
   right: 10px;
+  bottom: 10px;
 
   @include large-width {
     right: auto;
